<resources>
    <string name="app_name">Ruflu</string>
    <string name="channel_name">Ruflu</string>
    <string name="channel_id">RUFLU_NOTIFICATION_CHANNEL_ID</string>
    <string name="channel_description">ruflue app channel</string>

    <!--retrofit 2 baseUrl-->
    <string name="home_url">/home</string>

    <string name="MAIN_TABNAME1">ruflu</string>
    <string name="MAIN_TABNAME2">NearBy</string>
    <string name="PROFILE_Q_GENDER">성별</string>
    <string name="PROFILE_Q_WEI">키</string>
    <string name="PROFILE_Q_HEI">몸무게</string>
    <string name="PROFILE_Q_OCCU">직업</string>
    <string name="PROFILE_Q_OCCU_DTL">직업상세</string>
    <string name="PROFILE_Q_RLGN">종교</string>
    <string name="PROFILE_Q_ALCH">음주</string>
    <string name="PROFILE_Q_SMK_YN">흡연여부</string>
    <string name="PROFILE_Q_MBTI">MBTI</string>
    <string name="PROFILE_Q_FANCY">매력</string>
    <string name="PROFILE_Q_INTD">소개</string>
    <string name="PROFILE_Q_HOB">취미</string>
    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="EmailText">이메일</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="logoNm">Silloe</string>
    <string name="Login_button">로그인</string>
    <string name="signupText">회원가입</string>
    <string name="forgottenText">비밀번호 찾기</string>

    <!-- Title Name -->
    <string name="emailRegistration">이메일 등록</string>
    <string name="phoneVerification">휴대폰 인증</string>
    <string name="accountRecovery">계정 복구</string>
    <string name="emailVerification">이메일 인증</string>

    <string name="kakao_app_key">237c80b789b0c2a5beeac1edc09c5d77</string>

    <!-- register -->
    <string name="verifyCode">인증 코드</string>
    <string name="guideAccountRestoration">계정 복구 안내</string>
    <string name="guideContent">계정 복구를 위해서 초기 이메일 등록을 해주세요 \n등록하신 이메일로 계정을 찾으실 수 있습니다.</string>
    <string name="emailError">해당 이메일은 유효하지 않습니다.</string>
    <string name="nextButton">계속</string>


    <string-array name="city">
        <item>KR +82</item>
    </string-array>
  
    <!-- like -->
    <string name="some_title">당신에게 호감을 표시한 이성</string>
    <string name="match_title">매칭된 이성 </string>

    <!-- onboarding -->
    <string name="onboarding_next_button">다음</string>
    <string name="onboarding_one_progress">1/7</string>
    <string name="onboarding_one_title">성별을 알려주세요</string>
    <string name="onboarding_two_progress">2/7</string>
    <string name="onboarding_two_title">나이가 어떻게 되시나요?</string>
    <string name="onboarding_three_progress">3/7</string>
    <string name="onboarding_three_title">닉네임을 입력해주세요</string>
    <string name="onboarding_three_text_hint">ex. 뚱딩</string>
    <string name="onboarding_four_title">키를 설정해주세요</string>
    <string name="onboarding_four_process">4/7</string>
    <string name="onboarding_five_title">학력을 기입해주세요</string>
    <string name="onboarding_five_process">5/7</string>
    <string name="onboarding_six_title">직업을 선택해주세요</string>
    <string name="onboarding_six_process">6/7</string>
    <string name="onboarding_seven_title">좋아하는 이상형을 선택해주세요</string>
    <string name="onboarding_seven_process">7/7</string>

</resources>
