<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.devnuts.ruflu.ui.onboarding.fragment.six.OnboardingJobViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ruflu_almostWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_loading"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/ruflu_almostWhite"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/pb_loading"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="86"
                android:progressDrawable="@drawable/style_progressbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_loading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_loading"
                style="@style/TextStyle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:includeFontPadding="false"
                android:text="@string/onboarding_six_process"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pb_loading"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_effect"
            style="@style/TextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:text="@string/onboarding_six_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_loading" />

        <EditText
            android:id="@+id/et_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/ruflu_main_orange"
            android:hint="@string/onboarding_three_text_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="7"
            android:maxLines="1"
            android:text="@{viewModel.job}"
            android:textColor="@color/ruflu_main_black"
            android:textColorHint="#A0A0A0"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_effect" />

        <TextView
            android:id="@+id/btn_job"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/onboard_button_selector"
            android:gravity="center"
            android:text="@string/onboarding_next_button"
            android:enabled="false"
            android:textColor="@color/ruflu_white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
