<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ruflu_almostWhite"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ruflu_almostWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_loading"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/ruflu_almostWhite"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/pb_loading"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/style_progressbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_loading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_loading"
                style="@style/TextStyle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:includeFontPadding="false"
                android:text="@string/onboarding_seven_process"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pb_loading"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_effect"
            style="@style/TextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:text="@string/onboarding_seven_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_loading" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_fancy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_effect">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fancy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_onboarding_fancy" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_fancy"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/onboard_button_selector"
            android:gravity="center"
            android:text="@string/onboarding_next_button"
            android:textColor="@color/ruflu_white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>