<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.devnuts.ruflu.ui.onboarding.fragment.one.OnboardingGenderViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ruflu_almostWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_loading"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/ruflu_almostWhite"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/pb_loading"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="10"
                android:progressDrawable="@drawable/style_progressbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_loading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_loading"
                style="@style/TextStyle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:includeFontPadding="false"
                android:text="@string/onboarding_one_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pb_loading"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:text="@string/onboarding_one_title"
            android:textColor="@color/ruflu_main_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_loading" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_effect">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_onboarding_gender" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_gender"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/onboard_button_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/onboarding_next_button"
            android:textColor="@color/ruflu_white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>